syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hikarilan.nerabbs.lib.services.user.grpc";
option java_outer_classname = "UserServiceProto";

package user_service;

service UserInfo{
  /**
    Get basic user info by id
   */
  rpc GetUserInfo(BasicUserInfoRequest) returns (BasicUserInfoResponse);
}

service UserAuthorization{
  rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse);
}

service UserRegistration{
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message BasicUserInfoRequest{
  oneof identify{
    uint64 id = 1;
    string email = 2;
  }
}

message BasicUserInfoResponse{
  uint64 id = 1;
  string email = 2;
  string createAt = 3;
}

message CheckPasswordRequest{
  oneof identify{
    uint64 id = 1;
    string email = 2;
  }
  string password = 3;
}

message CheckPasswordResponse{
  bool correct = 1;
}

message RegisterUserRequest{
  string email = 1;
  string password = 2;
}

message RegisterUserResponse{
  uint64 id = 1;
}